<resources>
    <string name="app_name" translatable="false">XPL-EX</string>
    <string name="channel_privacy" translatable="false">XPrivacyLua</string>
    <string name="title_license" translatable="false">
        This app is meant to be used to protect your privacy. Modified and Extended from ObbedCode much love.
        <![CDATA[<br><br>]]>This is not the POWER OF YOUR CREATION!!
        <![CDATA[<br><br>]]>Copyright 2017-%1$d Marcel Bokhorst. All rights reserved.
        <![CDATA[<br><br>]]>This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
        <![CDATA[<br><br>]]>This program is distributed in the hope that it will be useful but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the <![CDATA[<a href="http://www.gnu.org/licenses/gpl.txt">GNU General Public License</a>]]> for more details.
        <![CDATA[<br><br><strong>LuaJ</strong><br>]]>Copyright 2007-2013 LuaJ. All rights reserved. See the <![CDATA[<a href="http://luaj.sourceforge.net/license.txt">license</a>]]>.
        <![CDATA[<br><br><b>Glide</b><br>]]>Copyright 2014 Google, Inc. All rights reserved. See the <![CDATA[<a href="https://raw.githubusercontent.com/bumptech/glide/master/LICENSE">license</a>]]>.
        <![CDATA[<br><br><b>Android Support Library</b><br>]]>Copyright 2011 The Android Open Source Project. See the <![CDATA[<a href="https://android.googlesource.com/platform/frameworks/support/+/master/LICENSE.txt">license</a>]]>.
    </string>
    <string name="title_accept">I agree</string>
    <string name="title_deny">I disagree</string>
    <string name="title_fix">Fix</string>
    <string name="title_all">All</string>
    <string name="title_restrict">Restrict</string>
    <string name="title_bootloop">Restricting can cause a bootloop</string>
    <string name="title_force_stop">Force stop automatically</string>
    <string name="title_use_default" translatable="false">Use Default if Null</string>
    <string name="button_reset_settings" translatable="false">Reset Settings</string>
    <string name="title_hooks_assign" translatable="false">Assign Hooks</string>
    <string name="title_delete_action" translatable="false">Delete</string>
    <string name="button_terminate" translatable="false">Terminate</string>
    <string name="button_properties" translatable="false">Properties</string>
    <string name="button_configs" translatable="false">Configs</string>
    <string name="button_profiles" translatable="false">Profiles</string>
    <string name="button_create_config" translatable="false">Create Config</string>
    <string name="button_create_profile" translatable="false">Create Profile</string>
    <string name="button_logs" translatable="false">Logs</string>
    <string name="button_force_stop" translatable="false">Force Stop</string>
    <string name="button_clear_app_data" translatable="false">Clear App Data</string>
    <string name="title_help_instructions">
        Tap on an app icon or name and tick restrictions to apply them.
        If possible, apps are automatically stopped to apply (or remove) restrictions immediately,
        but applying restrictions to some apps requires a device restart (see icons below).
        <![CDATA[<br><br>]]>Long press on an app name or icon to start the app.
        <![CDATA[<br><br>]]>See <![CDATA[<a href="https://github.com/0bbedCode/XPL-EX/blob/master/README.md">the documentation</a>]]>
        and <![CDATA[<a href="https://github.com/0bbedCode/XPL-EX/blob/master/FAQ.md">the frequently asked questions</a>]]> for more information.
    </string>
    <string name="thank_you" translatable="false">
        Hello this is ObbedCode, thanks for all the Love i will keep this project going til I DIE!.
        <![CDATA[<br><br>]]> Privacy will never be lost I wont stop til each app is FULLY black boxed.
        <![CDATA[<br><br>]]>This is my Art, Quality over Quantity so be patience pls and thanks to all who are patient!.
   </string>
    <string name="menu_whats_new_button" translatable="false">Whats New!</string>
    <string name="label_fingerprint_template" translatable="false">Device Template</string>
    <string name="label_fingerprint_profile_name" translatable="false">Profile Name</string>
    <string name="label_fingerprint_select_apps" translatable="false">Select Apps</string>
    <string name="label_fingerprint_location" translatable="false">Fake Location (optional)</string>
    <string name="hint_fingerprint_latitude" translatable="false">Latitude</string>
    <string name="hint_fingerprint_longitude" translatable="false">Longitude</string>
    <string name="action_apply_fingerprint_profile" translatable="false">Apply to Selected Apps</string>
    <string name="template_capture_current_device" translatable="false">Snapshot This Device</string>
    <string name="template_generic_synthetic" translatable="false">Generic Synthetic Device</string>
</resources>